[gd_scene load_steps=8 format=3 uid="uid://b07jfpiwtajh"]

[ext_resource type="Script" uid="uid://bf2qm2ncit8uq" path="res://sources/minigames/caterpillar/berry.gd" id="1_36web"]
[ext_resource type="PackedScene" uid="uid://cge0uyn30tcpv" path="res://sources/utils/fx/highlight.tscn" id="2_4ywgh"]
[ext_resource type="Texture2D" uid="uid://3hqfi1r6s4sp" path="res://assets/minigames/caterpillar/graphics/berry_pink.png" id="3_37fog"]
[ext_resource type="PackedScene" uid="uid://dlmbxcgiv8tpr" path="res://sources/utils/fx/wrong.tscn" id="4_gmtk0"]
[ext_resource type="LabelSettings" uid="uid://bguqnhiblwick" path="res://resources/themes/minigames_label_settings.tres" id="4_j1h4b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq0kv"]
size = Vector2(34, 264)

[sub_resource type="Curve2D" id="Curve2D_w7ms2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 346.679, 10.5307, -346.679, -10.5307, -310, -305.6, 73.0181, -1091.4, -73.0181, 1091.4, -1440, 2351.2, 0, 0, 0, 0, -1580, 5072.8)
}
point_count = 4

[node name="Berry" type="Area2D"]
script = ExtResource("1_36web")

[node name="HighlightFX" parent="." instance=ExtResource("2_4ywgh")]
offset_left = 33.0
offset_top = -136.0
offset_right = 33.0
offset_bottom = -136.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-50, -132)
shape = SubResource("RectangleShape2D_aq0kv")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(32, -78.2222)
curve = SubResource("Curve2D_w7ms2")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(1, -65.7778)
texture = ExtResource("3_37fog")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Path2D/PathFollow2D/Sprite2D"]
position = Vector2(90, 0)

[node name="Label" type="Label" parent="Path2D/PathFollow2D"]
unique_name_in_owner = true
offset_left = -112.0
offset_top = -105.7778
offset_right = 108.0
offset_bottom = 16.222198
text = "ent"
label_settings = ExtResource("4_j1h4b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WrongFX" parent="." instance=ExtResource("4_gmtk0")]
offset_left = 33.0
offset_top = -136.0
offset_right = 33.0
offset_bottom = -136.0

[node name="Button" type="Button" parent="."]
offset_left = -46.0
offset_top = -216.0
offset_right = 107.0
offset_bottom = -62.0
theme_type_variation = &"InvisibleButton"

[connection signal="screen_exited" from="Path2D/PathFollow2D/Sprite2D/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
